# kkk_game

./: .gitignore  README.md  analyze_categories_from_json.py  analyze_eldritch_assets.py  docker-compose.yml  extract_eldritch_assets.py  find_eldritch_matches.py  optimize_eldritch_assets.py  repomix-output.txt  repomix.config.json  seed_eldritch_cards.py  seed_eldritch_samples.py  upload_eldritch_assets.py  vibe_framework_guide.md
backend/: Dockerfile  Makefile  README.md  analyze_mappings.py  check_tts_samples.py  extract_tts_mappings.py  main.py  pyproject.toml  requirements.txt  script.py  tts_card_mappings.json
backend/docs/: 20240523000000_initial_schema.sql  20240523000001_add_is_ready.sql  20240523000005_replica_identity_full.sql  20240523000006_update_card_images.sql  20240523000008_add_multi_room_support.sql  20240523000013_cleanup_old_chats.sql  20240523000014_unique_players.sql
backend/src/app/: main.py
backend/src/app/api/: schemas.py  websocket.py
backend/src/app/api/v1/: admin.py  auth.py  cron.py  game.py
backend/src/app/core/: auth.py  base_game.py  config.py  database.py  i18n.py  logger.py  middleware.py  redis.py  scheduler.py  state_manager.py
backend/src/app/games/deception/: logic.py  (+2 more)
backend/src/app/locales/: en.json  vi.json
backend/src/app/scripts/: apply_migration.py  cleanup_and_reseed.py  cleanup_eldritch_data.py  migrate_admin.py  seed_eldritch_samples.py  upload_and_seed_all_eldritch.py  upload_essential_eldritch.py
backend/src/app/tests/: test_auth_robustness.py  verify_auth.py
mcp-server-rag/: main.py  pyproject.toml
(+89 files in other folders)
