[project]
name = "mcp-server-rag"
version = "0.1.0"
description = "Semantic RAG MCP Server for codebase optimization"
dependencies = [
    "mcp>=0.1.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    "pathspec>=0.12.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
